# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "wasm-graph"
version = "0.1.0"
authors = ["TVM Contributors"]
edition = "2018"
description = "WebAssembly graph to deep learning frameworks using TVM"
readme = "README.md"
repository = "https://github.com/apache/tvm"
license = "Apache-2.0"
keywords = ["wasm", "machine learning", "tvm"]

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ['cdylib']

[dependencies]
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.53"
ndarray = "0.12"
tvm-sys = { path = "../../../rust/tvm-sys" }
tvm-graph-rt = { path = "../../../rust/tvm-graph-rt" }
lazy_static = "1.1.1"
